Fix bug on safari
Hide text with opacity 0 when closed

--- a/assets/modules/dropdown/dropdown.css
+++ b/assets/modules/dropdown/dropdown.css
@@ -61,4 +61,5 @@ dropdown-box .dropdown-hidden p {
 	height: 0px;
 	margin: 0px 1em;
 	overflow: clip;
+	opacity: 0;
 }
